# zed

crates/editor/src/: editor.rs
crates/journal/: Cargo.toml
crates/journal/src/: deadline_notification.rs  journal.rs
crates/language/src/: language.rs
crates/settings/src/: settings_content.rs
